--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client/ && npm start",
-    "server": "nodemon server/index.js",
-    "start": "concurrently \"nodemon server/index.js\" \"cd client/ && npm start\""
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^6.2.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.12"
+    "express": "^4.17.1"
   }
 }
